[gd_scene load_steps=18 format=3 uid="uid://bt1jf4wbepfc0"]

[ext_resource type="Script" path="res://addons/fpc/character.gd" id="1_6qxl3"]
[ext_resource type="Script" path="res://character and weapons/classes/tool_slots/character_controls.gd" id="2_wh4ww"]
[ext_resource type="PackedScene" uid="uid://dp0lk73knr3dt" path="res://character and weapons/character_base/headbox.tscn" id="2_wl3u6"]
[ext_resource type="Script" path="res://character and weapons/classes/tool_slots/ability_lockout_handler.gd" id="7_5nhxw"]
[ext_resource type="PackedScene" uid="uid://cqa8xn3lvt0v6" path="res://health_component.tscn" id="8_oc3bq"]
[ext_resource type="PackedScene" uid="uid://3mij3cjhkwsm" path="res://addons/fpc/reticles/reticle_1.tscn" id="9_stgb5"]
[ext_resource type="Script" path="res://addons/fpc/debug.gd" id="10_p70my"]
[ext_resource type="PackedScene" uid="uid://c0x2dbl3adufr" path="res://hitbox_component.tscn" id="16_4jme1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o7vr3"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3tsiq"]
albedo_color = Color(0.231373, 0.184314, 0.501961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_b7ops"]
material = SubResource("StandardMaterial3D_3tsiq")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_yo8vr"]
size = Vector3(0.8, 1.5, 0.8)

[sub_resource type="Theme" id="Theme_t7lu0"]
MarginContainer/constants/margin_bottom = 10
MarginContainer/constants/margin_left = 10
MarginContainer/constants/margin_right = 10
MarginContainer/constants/margin_top = 10

[sub_resource type="BoxShape3D" id="BoxShape3D_xe75w"]
size = Vector3(0.6, 0.9, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k6ajc"]
albedo_color = Color(0.254902, 0.211765, 0.611765, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lfhnx"]
material = SubResource("StandardMaterial3D_k6ajc")
size = Vector3(0.6, 0.9, 0.6)

[sub_resource type="SphereShape3D" id="SphereShape3D_12bm7"]

[node name="character_base" type="CharacterBody3D" node_paths=PackedStringArray("HEAD", "CAMERA", "CAMERA_ANIMATION", "COLLISION_MESH", "HEALTHCOMPONENT", "HITBOX", "HEADHITBOX")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8759, 0)
collision_mask = 30
script = ExtResource("1_6qxl3")
class_type = 4
base_speed = 7.0
crouch_speed = 1.4
HEAD = NodePath("head")
CAMERA = NodePath("head/Camera3D")
CAMERA_ANIMATION = NodePath("charAnimation")
COLLISION_MESH = NodePath("CollisionShape3D")
HEALTHCOMPONENT = NodePath("HealthComponent")
HITBOX = NodePath("HitboxComponent")
HEADHITBOX = NodePath("head/headbox")

[node name="CharacterSynchronizer" type="MultiplayerSynchronizer" parent="."]

[node name="Controls" type="MultiplayerSynchronizer" parent="."]
root_path = NodePath(".")
script = ExtResource("2_wh4ww")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.445375, 0)

[node name="headbox" parent="head" node_paths=PackedStringArray("health_component") instance=ExtResource("2_wl3u6")]
collision_layer = 0
health_component = NodePath("../../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="head/headbox"]
shape = SubResource("BoxShape3D_o7vr3")

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0614423)
fov = 90.0

[node name="ability_lockout_handler" type="Node3D" parent="head/Camera3D"]
unique_name_in_owner = true
script = ExtResource("7_5nhxw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="head"]
mesh = SubResource("BoxMesh_b7ops")

[node name="charAnimation" type="AnimationPlayer" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_yo8vr")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("buff_grab") instance=ExtResource("8_oc3bq")]
buff_grab = NodePath("..")

[node name="UserInterface" type="Control" parent="HealthComponent"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle_1" parent="HealthComponent/UserInterface" node_paths=PackedStringArray("reticle_lines") instance=ExtResource("9_stgb5")]
layout_mode = 1
reticle_lines = [null, null, null, null]

[node name="DebugPanel" type="PanelContainer" parent="HealthComponent/UserInterface"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 453.0
offset_bottom = 50.0
theme = SubResource("Theme_t7lu0")
script = ExtResource("10_p70my")

[node name="MarginContainer" type="MarginContainer" parent="HealthComponent/UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HealthComponent/UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["team_2"] instance=ExtResource("16_4jme1")]
collision_layer = 0
collision_mask = 960
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.299992, 0)
shape = SubResource("BoxShape3D_xe75w")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
mesh = SubResource("BoxMesh_lfhnx")

[node name="CrouchCeilingDetection" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0647011, 0)
shape = SubResource("SphereShape3D_12bm7")
target_position = Vector3(0, 0.5, 0)

[node name="dash_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AnimationGun" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../head/Camera3D")

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]

[editable path="HealthComponent/UserInterface/Reticle_1"]
